css/700px.less
.min-width_768px() {

  body, table {
    font-size:12px;
  }
  h1 {
    font-size:3em;
  }
  h2 {
    font-size:2.5em;
  }
  h3 {
    font-size:2em;
  }
  h4 {
    font-size:1.5em;
  }
  h5 {
    font-size:1.25em;
  }
  .header {
    overflow:hidden;
  }
  
  .offset {
    overflow:visible;
    margin-top:-50px;
    margin-bottom:5px;
  }
  
  .logo {
    clear:both;
    margin-top:0;
  }
  
  .nav-main {
    position:absolute;
    top:68px;
    margin-left:3%;
    li {
      font-size:16px;
      width:auto;
      min-width:0px;
      margin:20px .1em 0 .1em;
      &.active {
        border-bottom:none;
        padding-bottom:11px;
        #gradient > .linear(#f2f5f8, #e5eaf1, #f2f5f8);
        #border > .radius(0.2em 0.2em 0 0);
      }
    }
  }
  .home-link { 
    clear:left;
    float:left;
    margin-top:13px; 
    margin-bottom:8px;
    position:static;
    margin-left:0;
    img {
      height:22px;
    }
  }
  .keyline {
    clear:both;
    font-size:10px;
    position:relative;
    top:-125px;
    float:right;
    padding-top:3px;
    li {
      float:left;
      padding:0 .5em;
    }
  }
  .logo { padding-top:40px; float:left;}
  .csso{ 
    float:right;
    position:relative;
    padding:0;
    top:-120px;
    clear:right;
  }
  .register { float:right; }
    .supplimental .item {
    clear:none;
  }
  .all-products {
    ol {
      float:left;
      padding:0 1% 0 2%;
      width:30%;
    }
    .insurance {
      border-left:1px solid grey;
      border-right:1px solid grey;
    }
  }
  .split{
    float:left;
  }
  .split-30 {
    width:26%;
  }
  .split-70 {
    width:70%;
  }
  .split-60 .section {
    width:100%;
  }

  .fireplace {
    .split-70 {
      width:100%;
    }
    .split-30 {
      width:100%;
    }
  }

  .main-col {
    .panel {
      #percentage > .padding-horizontal(10, 700);
      //float:none;
    }
  }

  #sidebar {
    float:right;
  }
  .footer {
    clear:both;
    .nav {
      #percentage > .margin-left(20, 940);
      li {
        #percentage > .width(180, 920);
      }
    }
  }
  .aside {
    margin:50px 0;
    overflow:hidden;
    .item {
      float:left;
      padding:0;
      #percentage > .margin-left(20, 940);
      #percentage > .width(210, 940);
      height:12em;
      overflow:hidden;
    }
  }
  
  #nav-secondary {
    font-size:100%;
    font-family:@copy-font;
    li {
      font-weight:normal;
      padding: 10px 20px;
      border-bottom: 1px solid #CCCCCC;
      &:last-child {
        border:0px solid;
      }
    }
    a {
      font-size:100%;
      display:inherit;
      border:0;
      #gradient > .clear;
      padding:0;
    }
  }
  .img {
    .content {
      float:left;
      width:74%;
      padding-right:1%;
    }
    img {
      float:right;
      width:24%;
      max-width:100%;
    }
  }

  .cols {
    width:100%;
    display:inline-block;
  }
  
  .main-col {
    float:right;
    #percentage > .width(700, 940);
  }
  .sec-col {
    float:left;
    #percentage > .width(220, 940);
  }

  #relaxfull { display:none; }
  #fullsite { display:inherit; }
  .wide-0, .wide-1 { display:inherit !important; }
  .narrow-0 { display:none !important; }
}

